--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,9 @@ a {
     color: lime;
 }
 
-:is(ul, ol):not(.not-list) {
+ol:not(.not-list),
+ul:not(.not-list),
+:is(ol, ul):not(.not-list) {
     margin-inline-start: 1.5em;
     text-align: left;
 }
